ionos/dome-wallet/wallet-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: wallet-server
  name: wallet-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: wallet-server
      app.kubernetes.io/name: wallet-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: wallet-server
        app.kubernetes.io/name: wallet-server
    spec:
      containers:
      - image: in2kizuna/wallet-server:v1.1.0-SNAPSHOT
        imagePullPolicy: Always
        name: wallet-server
