ionos/dome-wallet/wallet-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-server
spec:
  ports:
  - name: wallet-server
    port: 8080
  selector:
    app.kubernetes.io/name: wallet-server
