ionos/dome-wallet/wallet-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-server
  namespace: dome-wallet
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-dome-wallet
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"
spec:
  ingressClassName: nginx
  rules:
  - host: dome-wallet.eu
    http:
      paths:
      - backend:
          service:
            name: wallet-server
            port:
              number: 8080
        path: /wallet-server
        pathType: Prefix
  tls:
  - hosts:
    - dome-wallet.eu
    secretName: dome-wallet-secret
